fix path to favicon img

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Your app title</title>
     <meta name="description" content="Your app description" />
-    <link rel="icon" href="/android-chrome-512x512" type="image/svg+xml" />
+    <link rel="icon" href="/android-chrome-512x512.png" type="image/svg+xml" />
     <link
       rel="alternate icon"
       href="/favicon.ico"
@@ -13,7 +13,7 @@
       sizes="16x16"
     />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
-    <link rel="mask-icon" href="/android-chrome-512x512" color="#FFFFFF" />
+    <link rel="mask-icon" href="/android-chrome-512x512.png" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
