--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Your app title</title>
-    <meta name="description" content="Your app description" />
+    <title>Werdle</title>
+    <meta name="short_name" content="Werdle" />
+    <meta name="description" content="Not a ripoff of Wordle 😉" />
     <link rel="icon" href="/android-chrome-512x512.png" type="image/svg+xml" />
     <link
       rel="alternate icon"
